--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-WEATHER_API_URL= https://api.openweathermap.org/data/3.0/onecall?
-WEATHER_API_KEY= 460f6925e4df5b59fd3527d2a62d132f
+VITE_APP_URL=https://api.openweathermap.org/data/3.0/onecall?
+VITE_APP_API_KEY=753e76947b3fe09073506b55df5fe9ef
+VITE_APP_UNSPLASH_TOKEN=ZPOVt7acYVPY9xyRcPKBRo89NVY8bFSZD569kcGHZtY
